# hydrone-LARS

./: README.md
hydrone_aerial/: README.md
hydrone_aerial/hydrone_aerial_description/: CMakeLists.txt  package.xml
hydrone_aerial/hydrone_aerial_description/urdf/: hydrone.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro
hydrone_aerial/hydrone_aerial_gazebo/: package.xml
hydrone_aerial/hydrone_aerial_gazebo/launch/: hydrone_aerial_free.launch  hydrone_aerial_inspection.launch  hydrone_aerial_mapping.launch  hydrone_aerial_sensoring.launch  spawn_mav.launch
hydrone_aerial/hydrone_aerial_gazebo/models/coastal_base/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/coastal_base/materials/scripts/: coastal_base.material
hydrone_aerial/hydrone_aerial_gazebo/models/floor_arena/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_1/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_1/materials/scripts/: gas_marker_1.material
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_2/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_2/materials/scripts/: gas_marker_2.material
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_3/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_3/materials/scripts/: gas_marker_3.material
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_4/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/gas_marker_4/materials/scripts/: gas_marker_4.material
hydrone_aerial/hydrone_aerial_gazebo/models/hanging_base/: model.config  model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/hanging_base/materials/scripts/: hanging_base.material
hydrone_aerial/hydrone_aerial_gazebo/models/measure_gas_high_base_left/meshes/: measure_gas_high_base_left.mtl
hydrone_aerial/hydrone_aerial_gazebo/models/measure_gas_high_base_right/meshes/: measure_gas_high_base_right.mtl
hydrone_aerial/hydrone_aerial_gazebo/models/measure_gas_land_base/: model.sdf
hydrone_aerial/hydrone_aerial_gazebo/models/measure_gas_land_base/meshes/: measure_gas_land_base.mtl
hydrone_aerial/hydrone_aerial_gazebo/models/pipe/: model.sdf
hydrone_aerial/hydrone_aerial_gazebo/resource/: hydrone.yaml
hydrone_aerial/hydrone_aerial_gazebo/worlds/: arena.world  arena_spawn.world  fase1.world  fase2.world  fase3.world  fase4.world
hydrone_aerial/hydrone_aerial_mission_planner/: CMakeLists.txt  package.xml
hydrone_aerial/hydrone_aerial_mission_planner/scripts/: defines.py  hydrone_aerial_mission_planner.py  inspection_task.py  mapping_task.py  sensoring_task.py  utils.py
inspection_task/: CMakeLists.txt  package.xml
inspection_task/include/: detect_number.cpp  detect_number.hpp
inspection_task/launch/: launch.launch
inspection_task/src/: inspection_task.cpp
mapping_task/: CMakeLists.txt  package.xml
mapping_task/launch/: mapping_task.launch
mapping_task/src/: base_detector.cpp
sensing_task/: CMakeLists.txt  README.md  package.xml
sensing_task/launch/: sensing_task.launch
sensing_task/scripts/: sensors_class.py  sensors_detector.py
