<?xml version="1.0"?>
<package format="2">
  <name>hydrone_aerial_mission_planner</name>
  <version>0.0.0</version>
  <description>The hydrone_aerial_mission_planner package</description>

  <maintainer email="nautec@todo.todo">nautec</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>base_detector</depend>
  <depend>mavros_msgs</depend>
  <depend>geographic_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
